# airmash-client

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  script
examples/: calc-visible.rs  follower.rs
scripts/: gen_grid.rs
src/: client.rs  client_trait.rs  config.rs  consts.rs  error.rs  gamestate.rs  lib.rs  macros.rs  main.rs  map-old.rs  map.rs  message_handler.rs  received_message.rs
src/client/: client.rs  client_base.rs  client_event.rs  error.rs  event.rs  handler.rs  mod.rs  pathfinding.rs
src/client2/: client.rs  event.rs  mod.rs
src/future/: boxed_future.rs  mod.rs
src/game/: me.rs  mob.rs  mod.rs  player.rs  world.rs
src/map/: map_data.rs  mod.rs  vis_data.rs
src/util/: mod.rs
