[package]
name = "airmash-client"
version = "0.0.0"
authors = ["STEAMROLLER"]
publish = false
license = "Apache-2.0 OR MIT"
edition = "2018"

[profile.release]
#lto = true

[features]
admin = []
default = ["admin"]

[dependencies]
tokio = { version="1.0", features=["full"] }
futures = "0.3"
tungstenite = "0.13"
tokio-tungstenite = "0.14"
airmash-protocol = { git = "https://github.com/steamroller-airmash/airmash-protocol-rs", branch="remove-dimensioned" }
# airmash-protocol-v5 = { git = "https://github.com/steamroller-airmash/airmash-protocol-v5" }
log = "0.4"
hashbrown = "*"
url = "*"
env_logger = "*"
rand = "*"
native-tls = "*"
bstr = "*"

[dev-dependencies]
clap = "*"
