[package]
name = "airmash-client"
version = "0.0.0"
authors = ["STEAMROLLER"]
publish = false
license = "Apache-2.0 OR MIT"
edition = "2018"

[profile.release]
#lto = true

[features]
admin = []
default = ["admin"]

[dependencies]
tokio = { version="1.0", features=["full"] }
futures = "0.3"
tungstenite = "0.13"
tokio-tungstenite = "0.14"
airmash-protocol = { git = "https://github.com/steamroller-airmash/airmash-protocol-rs", branch="remove-dimensioned", features=["serde"] }
log = "0.4"
hashbrown = "0.11"
url = "2.2"
env_logger = "0.8"
rand = "0.8"
native-tls = "0.2"
bstr = "0.2"

serde = { version = "1.0", features = ["derive"] }
serde-deserialize-over = { git="https://github.com/steamroller-airmash/serde-deserialize-over" }

[dev-dependencies]
clap = "2.33"
